unpackaged/main/default/objects/Licencing__c/Licencing__c.object-meta.xml
<CustomObject>
    <description>Object that is created when advice is set up. Tracks the work of the planners and partners so that we know when their work no longer needs to be reviewed.</description>
    <label>Licencing</label>
    <nameField>
        <label>Licencing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licencing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>