unpackaged/main/default/objects/Licencing__c/fields/AIM_ISA__c.field-meta.xml
<CustomField>
    <fullName>AIM_ISA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AIM ISA</label>
    <type>Checkbox</type>
</CustomField>