unpackaged/main/default/objects/Licencing__c/fields/AIM_non_ISA__c.field-meta.xml
<CustomField>
    <fullName>AIM_non_ISA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AIM (non-ISA)</label>
    <type>Checkbox</type>
</CustomField>