unpackaged/main/default/objects/Licencing__c/fields/Appropriate_pace_upheld__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_pace_upheld__c</fullName>
    <label>Appropriate pace upheld</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_Status</valueSetName>
    </valueSet>
</CustomField>