unpackaged/main/default/objects/Licencing__c/fields/Choice_Non_ISA__c.field-meta.xml
<CustomField>
    <fullName>Choice_Non_ISA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Choice (Non-ISA)</label>
    <type>Checkbox</type>
</CustomField>