unpackaged/main/default/objects/Licencing__c/fields/Equity_Release__c.field-meta.xml
<CustomField>
    <fullName>Equity_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equity Release</label>
    <type>Checkbox</type>
</CustomField>