unpackaged/main/default/objects/Licencing__c/fields/Final_RAG__c.field-meta.xml
<CustomField>
    <fullName>Final_RAG__c</fullName>
    <label>Final RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_Status</valueSetName>
    </valueSet>
</CustomField>