unpackaged/main/default/objects/Licencing__c/fields/Final_summary__c.field-meta.xml
<CustomField>
    <fullName>Final_summary__c</fullName>
    <label>Final summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>