unpackaged/main/default/objects/Licencing__c/fields/Lifeline_presented_as_guidance_or_othe__c.field-meta.xml
<CustomField>
    <fullName>Lifeline_presented_as_guidance_or_othe__c</fullName>
    <inlineHelpText>Lifeline presented as &#39;guidance&#39; or otherwise without guarantee</inlineHelpText>
    <label>Lifeline presented as &#39;guidance&#39; or othe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_Status</valueSetName>
    </valueSet>
</CustomField>