unpackaged/main/default/objects/Licencing__c/fields/No_additional_advice_offered_in_relation__c.field-meta.xml
<CustomField>
    <fullName>No_additional_advice_offered_in_relation__c</fullName>
    <inlineHelpText>No additional advice offered in relation to unexpected queries (if applicable)</inlineHelpText>
    <label>No additional advice offered in relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_Status</valueSetName>
    </valueSet>
</CustomField>