unpackaged/main/default/objects/Licencing__c/fields/OW_GIA__c.field-meta.xml
<CustomField>
    <fullName>OW_GIA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OW GIA</label>
    <type>Checkbox</type>
</CustomField>