unpackaged/main/default/objects/Licencing__c/fields/OW_ISA__c.field-meta.xml
<CustomField>
    <fullName>OW_ISA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OW ISA</label>
    <type>Checkbox</type>
</CustomField>