unpackaged/main/default/objects/Licencing__c/fields/OW_SIPP__c.field-meta.xml
<CustomField>
    <fullName>OW_SIPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OW SIPP</label>
    <type>Checkbox</type>
</CustomField>