unpackaged/main/default/objects/Licencing__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>