unpackaged/main/default/objects/Licencing__c/fields/Partner_lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Licencing2</relationshipName>
    <type>Lookup</type>
</CustomField>