unpackaged/main/default/objects/Licencing__c/fields/Positive__c.field-meta.xml
<CustomField>
    <fullName>Positive__c</fullName>
    <label>Positive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>