unpackaged/main/default/objects/Licencing__c/fields/Recorded_meeting_disclo__c.field-meta.xml
<CustomField>
    <fullName>Recorded_meeting_disclo__c</fullName>
    <label>Recorded meeting disclosure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_Status</valueSetName>
    </valueSet>
</CustomField>