unpackaged/main/default/objects/Licencing__c/fields/Related_Advice__c.field-meta.xml
<CustomField>
    <fullName>Related_Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Licencing</relationshipLabel>
    <relationshipName>Licencings</relationshipName>
    <type>Lookup</type>
</CustomField>