unpackaged/main/default/objects/Licencing__c/fields/Senior_Planner__c.field-meta.xml
<CustomField>
    <fullName>Senior_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Licencing1</relationshipName>
    <type>Lookup</type>
</CustomField>