unpackaged/main/default/objects/Licencing__c/fields/Suitability_Planner__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Planner__c</fullName>
    <formula>Related_Advice__r.Assigned_planner__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suitability Planner</label>
    <type>Text</type>
</CustomField>