unpackaged/main/default/objects/Licencing__c/fields/TBC__c.field-meta.xml
<CustomField>
    <fullName>TBC__c</fullName>
    <label>TBC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_Status</valueSetName>
    </valueSet>
</CustomField>