unpackaged/main/default/objects/Licencing__c/fields/VCT_AIM__c.field-meta.xml
<CustomField>
    <fullName>VCT_AIM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VCT - AIM</label>
    <type>Checkbox</type>
</CustomField>