unpackaged/main/default/objects/Licencing__c/fields/What_went_well__c.field-meta.xml
<CustomField>
    <fullName>What_went_well__c</fullName>
    <label>What went well</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>