unpackaged/main/default/objects/Licencing__c/recordTypes/Partner_Licencing.recordType-meta.xml
<RecordType>
    <fullName>Partner_Licencing</fullName>
    <active>true</active>
    <label>Partner Licencing</label>
</RecordType>