unpackaged/main/default/objects/Licencing__c/recordTypes/Planner_Licencing.recordType-meta.xml
<RecordType>
    <fullName>Planner_Licencing</fullName>
    <active>true</active>
    <label>Planner Licencing - Narrative</label>
</RecordType>