unpackaged/main/default/objects/Licencing__c/recordTypes/Planner_Licencing_Deck.recordType-meta.xml
<RecordType>
    <fullName>Planner_Licencing_Deck</fullName>
    <active>true</active>
    <label>Planner Licencing - Deck</label>
</RecordType>